--- a/mentor_me-ui/package.json
+++ b/mentor_me-ui/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "mentor_me-ui",
   "private": true,
@@ -11,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "fs": "^0.0.1-security",
+    "install": "^0.13.0",
+    "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-dropdown-select": "^4.9.4",
+    "react-router-dom": "^6.14.1",
+    "react-select": "^5.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
