--- a/mentor_me-ui/package.json
+++ b/mentor_me-ui/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "npm": "^9.8.1",
