--- a/mentor_me-ui/package.json
+++ b/mentor_me-ui/package.json
@@ -15,6 +15,7 @@
     "install": "^0.13.0",
     "npm": "^9.8.1",
     "react": "^18.2.0",
+    "react-chat-engine": "^1.11.28",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.4",
     "react-router-dom": "^6.14.1",
