--- a/mentor_me-ui/package.json
+++ b/mentor_me-ui/package.json
@@ -16,6 +16,7 @@
     "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-chat-engine": "^1.11.28",
+    "react-chat-engine-advanced": "^0.1.28",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.4",
     "react-router-dom": "^6.14.1",
